@@ -1,5 +1,5 @@
 import matplotlib.pyplot as plt
-from mpl_toolkits.axes_grid import AxesGrid
+from mpl_toolkits.axes_grid1 import AxesGrid
 
 def get_demo_image():
     import numpy as np
@@ -38,6 +38,7 @@ def demo_grid_with_single_cbar(fig):
                     axes_pad = 0.0,
                     share_all=True,
                     label_mode = "L",
+                    cbar_location = "top",
                     cbar_mode="single",
                     )
 
@@ -47,6 +48,9 @@ def demo_grid_with_single_cbar(fig):
     #plt.colorbar(im, cax = grid.cbar_axes[0])
     grid.cbar_axes[0].colorbar(im)
 
+    for cax in grid.cbar_axes:
+        cax.toggle_label(False)
+        
     # This affects all axes as share_all = True.
     grid.axes_llc.set_xticks([-2, 0, 2])
     grid.axes_llc.set_yticks([-2, 0, 2])
@@ -71,6 +75,9 @@ def demo_grid_with_each_cbar(fig):
     for i in range(4):
         im = grid[i].imshow(Z, extent=extent, interpolation="nearest")
         grid.cbar_axes[i].colorbar(im)
+
+    for cax in grid.cbar_axes:
+        cax.toggle_label(False)
 
     # This affects all axes because we set share_all = True.
     grid.axes_llc.set_xticks([-2, 0, 2])
