@@ -1,7 +1,6 @@
 import matplotlib.pyplot as plt
 
-from mpl_toolkits.axes_grid.inset_locator import inset_axes
-from mpl_toolkits.axes_grid.colorbar import colorbar
+from mpl_toolkits.axes_grid1.inset_locator import inset_axes
 
 fig = plt.figure(1, [6, 3])
 
@@ -14,7 +13,7 @@ axins1 = inset_axes(ax1,
                     loc=1)
 
 im1=ax1.imshow([[1,2],[2, 3]])
-colorbar(im1, cax=axins1, orientation="horizontal", ticks=[1,2,3])
+plt.colorbar(im1, cax=axins1, orientation="horizontal", ticks=[1,2,3])
 axins1.xaxis.set_ticks_position("bottom")
 
 # first subplot
@@ -34,7 +33,7 @@ axins = inset_axes(ax,
 # the bbox_to_anchor coordinate.
 
 im=ax.imshow([[1,2],[2, 3]])
-colorbar(im, cax=axins, ticks=[1,2,3])
+plt.colorbar(im, cax=axins, ticks=[1,2,3])
 
 plt.draw()
 plt.show()
