@@ -1,7 +1,7 @@
 from matplotlib.transforms import Bbox, TransformedBbox, \
      blended_transform_factory
 
-from mpl_toolkits.axes_grid.inset_locator import BboxPatch, BboxConnector,\
+from mpl_toolkits.axes_grid1.inset_locator import BboxPatch, BboxConnector,\
      BboxConnectorPatch
 
 
